[package]
name = "arora-hal-ros2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ROS 2 HAL for Arora: drives ROS robots (NAO, Pepper, Quori, UR3/UR5, G1) as Arora devices"

[lib]
name = "arora_hal_ros2"

# The device runner: one binary, the robot is picked at runtime (CLI arg or
# ROBOT env var — a well-known name or a JSON config path).
[[bin]]
name = "arora-ros2"
path = "src/bin/arora-ros2.rs"
required-features = ["runner"]

[features]
# The arora-ros2 binary: pulls the full arora runtime with the Semio Studio
# connection. The library (the HAL itself) stays lean without it.
runner = ["dep:arora", "dep:anyhow"]

[dependencies]
anyhow = { version = "1", optional = true }
arora-hal = { path = "../arora-hal", version = "0.1" }
arora-types = { path = "../arora-types", version = "1.5" }
arora = { path = "../arora", version = "0.2", features = ["studio-bridge"], optional = true }
async-trait = "0.1"
byteorder = "1"
chrono = "0.4"
futures = "0.3"
log = "0.4"
ros2-client = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
rand = "0.9"
# `time` (tests only): the DDS round-trip tests sleep and time out around
# discovery; the HAL itself needs no timers.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

# build.rs downloads the robots' GLB models (public Semio Studio assets) into
# models/. TLS is pinned to the bundled webpki roots so it also works on hosts
# with no populated OS trust store.
[build-dependencies]
bytes = "1"
reqwest = { version = "0.13", features = [
  "rustls-no-provider",
], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "1"
tokio = { version = "1", features = ["macros", "rt"] }
