[package]
name = "arora-hal"
version = "1.0.0"
edition = "2021"
description = "Arora Hardware Abstraction Layer (HAL) trait, with a fake implementation."
license = "MIT"
readme = "readme.md"

[dependencies]
arora-types = { path = "../arora-types", version = "1.5" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
