[package]
name = "arora-hal"
version = "2.0.0"
edition = "2021"
description = "Arora Hardware Abstraction Layer (HAL) trait, with a fake implementation."
license = "MIT"
readme = "readme.md"

[dependencies]
arora-types = { path = "../arora-types", version = "1.5" }
async-trait = "0.1"
# `futures::executor::block_on` backs the default `Hal::try_send` (forward to the
# async `write`) on native targets; wasm HALs override `try_send` synchronously.
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
