[package]
name = "arora-hal"
version = "3.0.0"
edition = "2021"
description = "Arora Hardware Abstraction Layer (HAL) trait, with a fake implementation."
license = "MIT"
readme = "readme.md"

[dependencies]
arora-types = { path = "../arora-types", version = "2" }
async-trait = "0.1"
# async `write`) on native targets; wasm HALs override `try_send` synchronously.
futures-channel = "0.3"
futures-core = "0.3"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
