[package]
name = "arora-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-schema = { path = "../arora-schema" }
derive_more = "*"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "*"
serde_yaml = "0.8"