[package]
name = "arora-module-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-module-core = { path = "../arora-module-core" }
arora-registry = { path = "../arora-registry" }
arora-schema = { path = "../arora-schema" }
arora-vfs = { path = "../arora-vfs" }
semio-client = { git = "https://github.com/semio-ai/semio-client.git", branch = "master" }
anyhow = "*"
clap = { version = "3.0.10", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = "0.11.9"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }
