[package]
name = "arora-module-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-module-core = { path = "../arora-module-core" }
arora-registry = { path = "../arora-registry" }
arora-schema = { git = "https://github.com/semio-ai/arora-schema.git", branch = "main" }
arora-vfs = { path = "../arora-vfs" }
semio-record = { git = "https://github.com/semio-ai/semio-record.git", branch = "master" }
semio-client = { git = "https://github.com/semio-ai/semio-client.git", branch = "master" }
anyhow = "*"
clap = { version = "3.0.10", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
