[package]
name = "arora-module-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semio-record = { git = "https://github.com/semio-ai/semio-record.git", branch = "master" }
semio-client = { git = "https://github.com/semio-ai/semio-client.git", branch = "master" }
arora-registry = { path = "../arora-registry" }
arora-schema = { git = "https://github.com/semio-ai/arora-schema.git", branch = "main" }
arora-vfs = { path = "../arora-vfs" }
bytes = "1"
convert_case = "0.5"
derive_more = "2"
semver = "1.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = "0.8.2"

[dev-dependencies]
serde_yaml = "0.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
