[package]
name = "arora-module-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semio-record = { git = "https://github.com/semio-ai/semio-record.git", branch = "main" }
arora-registry = { path = "../arora-registry" }
arora-types = "1"
arora-vfs = { path = "../arora-vfs" }
bytes = "1"
convert_case = "0.11"
derive_more = { version = "2", features = ["display"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = "1"

[dev-dependencies]
serde_yaml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
