[package]
name = "arora-module-cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-module-core = { path = "../arora-module-core" }
arora-registry = { path = "../arora-registry" }
arora-schema = { path = "../arora-schema" }
arora-vfs = { path = "../arora-vfs" }
semio-client = { git = "https://github.com/semio-ai/semio-client.git", branch = "master" }
semio-record = { git = "https://github.com/semio-ai/semio-entity.git", branch = "master" }
anyhow = "*"
clap = { version = "3.0.10", features = ["derive"] }
convert_case = "0.5"
derive_more = "*"
lazy_static = "*"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }