[package]
name = "arora-module-cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-module-core = { path = "../arora-module-core" }
arora-registry = { path = "../arora-registry" }
arora-types = { path = "../arora-types", version = "1.4" }
arora-vfs = { path = "../arora-vfs" }
semio-record = { git = "https://github.com/semio-ai/semio-record.git", branch = "main" }
anyhow = "*"
clap = { version = "3", features = ["derive"] }
convert_case = "0.11"
derive_more = { version = "2", features = ["from"] }
lazy_static = "*"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
