[package]
name = "arora-module-rust"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
include = ["/src"]

[dependencies]
arora-module-core = { path = "../arora-module-core" }
arora-registry = { path = "../arora-registry" }
arora-types = "1"
arora-vfs = { path = "../arora-vfs" }
semio-client = { git = "https://github.com/semio-ai/semio-client.git", branch = "master" }
semio-record = { git = "https://github.com/semio-ai/semio-record.git", branch = "master" }
anyhow = "*"
async-recursion = "1"
clap = { version = "3.0.10", features = ["derive"] }
convert_case = "0.5"
derive_more = "2"
itertools = "0.10"
lazy_static = "*"
proc-macro2 = "1"
quote = "1.0"
semver = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
