[package]
name = "arora-registry"
version = "0.1.2"
edition = "2021"
description = "Local type-record registry for Arora: stores, tags and freezes type records."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arora-types = { path = "../arora-types", version = "1.6" }
async-trait = "0.1"
derive_more = "2"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
