[package]
name = "arora-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semio-record = { git = "https://github.com/semio-ai/semio-entity.git", branch = "master" }
lazy_static = "*"
uuid = "*"
