[package]
name = "arora-util"
version = "0.1.0"
edition = "2021"
description = "Internal utility helpers for the Arora runtime."
license = "MIT"

[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["serde"] }

[build-dependencies]
cbindgen = "0.20"
