[package]
name = "arora-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
derive_more = "2"
serde = { version = "1", features = ["derive", "rc"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
