[package]
name = "arora-web"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
description = "wasm-bindgen entry point for running the Arora engine in a browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arora = { path = "../arora", default-features = false }
arora-types = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_yaml = "0.9"
# test-rust-wasm guest (wasm32-wasip1) the browser test include_bytes!s; cargo
# exposes its path as CARGO_CDYLIB_FILE_TEST_RUST_WASM_test_rust_wasm.
test-rust-wasm = { path = "../../modules/test-rust-wasm", artifact = "cdylib", target = "wasm32-wasip1" }
